-Fixed Portfolio home button off-center. -Testing landing arrow pos

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2859,7 +2859,7 @@ ul.actions.fit.stacked {
   ul.actions:not(.fixed) li input[type="button"],
   ul.actions:not(.fixed) li button,
   ul.actions:not(.fixed) li .button {
-    width: 40%;
+    width: 50%;
   }
 
   ul.actions:not(.fixed) li input[type="submit"].icon:before,
@@ -3914,7 +3914,7 @@ body.is-touch #banner {
   }
 
   #banner .goto-next {
-    height: 14em;
+    height: 17em;
   }
 
   #banner .content {
